Bug 467274 - Elisa does not recognise covers with .jpeg extension
Summary: Elisa does not recognise covers with .jpeg extension
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.3
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-13 11:23 UTC by Emir SARI
Modified: 2023-07-25 19:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Emir SARI 2023-03-13 11:23:18 UTC
Given that the image name is the same as the folder name, renaming as .jpg works though.
Comment 1 Nate Graham 2023-03-13 22:09:34 UTC
What's the exact filename that doesn't work? And what exactly do you change it to to make it work?
Comment 2 Emir SARI 2023-03-14 12:03:52 UTC
It’s a standard ASCII file name only with the extension .jpeg. When I rename the extension to .jpg and rebuild the database, Elisa recognises the cover and displays it on the main window.
Comment 3 Nate Graham 2023-03-14 15:05:57 UTC
That's odd because the code definitely explicitly supports both .jpg and .jpeg as file extensions: https://invent.kde.org/multimedia/elisa/-/blob/master/src/filescanner.cpp#L74

Can you provide the full filename anyway?
Comment 4 Emir SARI 2023-03-14 16:06:54 UTC
My bad, I just realised that there is a Unicode Middle Dot on the artist name:

Sak·Sok - The First Lession of Tatar.jpg
Comment 5 Nate Graham 2023-03-15 15:20:58 UTC
Thanks.
Comment 6 Jack Hill 2023-06-20 10:36:13 UTC
Can you try setting the indexer to Scan The Filesystem Directly and then scanning for new music? Might be an issue with Baloo
Comment 7 Emir SARI 2023-06-20 11:52:13 UTC
Sorry, I am far away from this machine at this moment. I only have a VM available with no personal data at all, so it will be a while until I get back to this.
Comment 8 Jack Hill 2023-06-20 11:53:27 UTC
No worries, I realised that Elisa does not check for "jpeg" extensions when searching for images that share the same name as the directory. Will be fixed shortly
Comment 9 Nate Graham 2023-06-27 19:54:35 UTC
Git commit 07af3b8db46008bb3c0e99dfc3013b2364a0dc8e by Nate Graham, on behalf of Jack Hill.
Committed on 27/06/2023 at 19:38.
Pushed by ngraham into branch 'master'.

Build cover file search strings from file name + extension

So if we choose to support a new extension for cover files, we only need
to add it in one location rather than multiple places.

Also, the search for cover files that matched the name of the directory
did not include files with "jpeg" extensions. This is now fixed.

M  +29   -20   src/filescanner.cpp

https://invent.kde.org/multimedia/elisa/-/commit/07af3b8db46008bb3c0e99dfc3013b2364a0dc8e