Build cover file search strings from file name + extension

So if we choose to support a new extension for cover files, we only need
to add it in one location rather than multiple places.

Also, the search for cover files that matched the name of the directory
did not include files with "jpeg" extensions. This is now fixed.

BUG: 467274